Fix overlapped sidebar in Safari

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -6,7 +6,6 @@ aside {
   top: 1rem;
   left: 1rem;
   bottom: 1rem;
-  width: 100%;
   max-width: 320px;
   border-radius: 15px;
   background-image: linear-gradient(195deg, #42424a, #191919);
@@ -32,7 +31,7 @@ aside {
   align-items: center;
   gap: 0.5em;
   border-bottom: 1px solid $clr-dark-gray-2;
-  padding: 1.7em;
+  padding: 1.7em 2.7em;
 
   svg {
     color: $clr-white;
